Added Maven profiles to manage dependencies with different versions of APS: added support for APS 1.10